# apid

./: Cargo.toml  README.md
apid/: Cargo.toml
apid-telegram-bot/: Cargo.toml
apid-telegram-bot/src/: callback_query.rs  chat.rs  chat_join_request.rs  chat_member_updated.rs  inline_query.rs  lib.rs  message.rs  poll.rs  pre_checkout_query.rs  shipping_query.rs  update.rs  user.rs  util.rs  webhook_info.rs
apid-telegram-bot/src/bot/: bot_command.rs  mod.rs
apid-telegram-bot/src/calls/: mod.rs
apid-telegram-bot/src/calls/message/: mod.rs  send_message.rs
apid-telegram-bot/src/calls/misc/: close.rs  get_me.rs  log_out.rs  mod.rs
apid-telegram-bot/src/chat/: chat.rs  chat_kind.rs  chat_location.rs  chat_photo.rs  mod.rs
apid-telegram-bot/src/game/: callback_game.rs  game.rs  mod.rs
apid-telegram-bot/src/inline_mode/: inline_query.rs
apid-telegram-bot/src/media/: location.rs  mod.rs
apid-telegram-bot/src/message/: animation.rs  contact.rs  message.rs  message_entity.rs  mod.rs  photo_size.rs  service.rs  video_chat.rs
apid-telegram-bot/src/poll/: mod.rs  poll.rs  poll_answer.rs  poll_option.rs
apid-telegram-bot/src/types/: bool_const.rs  callback_query.rs  chat_join_request.rs  chat_member_updated.rs  mod.rs  pre_checkout_query.rs  shipping_query.rs  update.rs  user.rs  webhook_info.rs
apid-telegram-bot/src/video_chat/: mod.rs  video_chat_ended.rs  video_chat_participants_invited.rs  video_chat_scheduled.rs  video_chat_started.rs
apid-telegram-bot/src/web_app/: mod.rs  web_app_data.rs  web_app_info.rs
apid-telegram-bot/tests/: ranol_bot_1.rs
(+42 files in other folders)
