[package]
name = "apid-telegram-bot"
version = "0.1.4"
edition = "2021"
authors = ["RanolP <public.ranolp@gmail.com"]
repository = "https://github.com/bot-any/apid"
license = "MIT"
description = "type definitions for Telegram Bot API"
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"